assets/index.css
/*
Avalanche blue #2596be;
*/

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

@font-face {
    font-family: "DSEG7-Classic-Bold";
    src: url(fonts/DSEG7Classic-Bold.woff);
}

h1 {
    position: absolute;
    margin-top: 3rem;
    margin-bottom: 1rem;
    font-family: 'Bungee', 'Oxanium', 'Helvetica', sans-serif;
    font-size: 64px;
    font-display: swap;
    opacity: 80%;
    text-align: center;
    text-decoration: overline underline;
    letter-spacing: 0.3rem;
    color: #5d1d31;
    border: none;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
}

.wrapper {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    position: absolute;
    width: 100%;
    height: 100%;
    background: url(images/concrete_seamless.png);
    background-size: contain;
    background-attachment: fixed;
    padding: 0;
    margin: 0;
    justify-content: center;
    overflow: hidden;
    z-index: -100;
}

.clockContainer {
    position: relative;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    justify-content: center;
    margin-top: 15rem;
    margin-bottom: 1rem;
    margin-left: 1rem;
    margin-right: 1rem;
    z-index: 12;
}

.clock {
    min-width: 6rem;
    max-width: 5rem;
    top: 28%;
    height: 4rem;
    line-height: 4rem;
    margin: 0 2rem;
    padding: 2rem 4rem;
    font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
    font-size: 68px;
    font-display: swap;
    text-align: center;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    background-image: repeating-linear-gradient(rgba(110, 170, 250, 0.2), rgba(110, 170, 250, 0.6));
    color: #5d1d31;
    border: 1px solid rgba(110, 170, 250, 0.3); 
    border-bottom: 1px solid rgba(110, 170, 250, 0.3);
    box-shadow: 0 0 1px #143b91;
    border-radius: 5px 35px;
    outline: none;
    z-index: 12;
}

#days {
    padding-right: 8rem;
}

.colon {
    position: relative;
    color:#6b283d;
    font-size: 90px;
    opacity: 90%;
}

#lastColon {
    animation: flash 2s linear infinite;
}
    @keyframes flash {
        25% { opacity: 0; }

        50% { opacity: 0; }

        100% { opacity: 80%; }
    }

.logoContainer {
    position: absolute;
    width: 100%;
    height: 60%;
    top: 0;
    background-image: url(images/avalanche.svg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    margin: 0 auto;
    opacity: 30%;
    z-index: -20;
}

.bottomContainer {
    position: absolute;
    transform: rotateZ(0deg);
    width: 100%;
    height: 40%;
    bottom: 0;
    background-color:rgba(110, 170, 250, 0.2);
    overflow-y: hidden;
    z-index: -16;
}

#goal {
    position: relative;
    float: right;
    margin-top: 7rem;
    margin-right: 12rem;
    margin-bottom: 3rem;
    filter: drop-shadow(0 0 4px rgba(88, 88, 88, 0.8));
    transform: scale(1.3);
    z-index: 12;
}


@media screen and (max-width: 768px) {
    h1 {
        margin: 2rem;
        font-size: 36px;
    }
    .clockContainer {
        margin-left: 1rem;
        margin-right: 1rem;
    }
    .clock { 
        min-width: 3rem;
        max-width: 3rem;
        height: 1rem;
        line-height: 1rem;
        margin: 0 0.5rem;
        padding: 8px 12px;
        border-radius: 2px 14px;
        font-size: 24px;
        justify-content: center;
    }
    .colon {
        font-size: 38px;
        line-height: 2rem;
    }
    #days {
        padding-right: 18px;
    }
    #goal {
        transform: scale(0.9);
        margin-top: 5rem;
        margin-right: 2.5rem;
    }
}

@media screen and (max-width: 768px) and (orientation: landscape) {
    h1 {
        margin: 2rem;
        font-size: 48px;
    }
    .clockContainer {
        margin-top: 7rem;
        margin-bottom: 1rem;
    }
    .clock {
        min-width: 5rem;
        max-width: 5rem;
        height: 3rem;
        line-height: 3rem;
        margin: 0 auto;
        padding: 3px 21px;
        border-radius: 2px 14px;
        font-size: 30px;
    }
    .colon {
        font-size: 50px;
        line-height: 2rem;
    }
    #goal {
        margin-top: 4rem;
        margin-right: 8rem;
        transform: none;
    }
}


@media screen and (max-device-width: 768px) and (orientation: landscape) {
    h1 {
        margin: 2rem;
        font-size: 32px;
    }
    .clockContainer {
        margin-top: 7rem;
        margin-bottom: 1rem;
    }
    .clock {
        min-width: 5rem;
        max-width: 5rem;
        height: 2rem;
        line-height: 2rem;
        margin: 0 auto;
        padding: 3px 21px;
        border-radius: 2px 14px;
        font-size: 34px;
    }
    .colon {
        font-size: 50px;
        line-height: 2rem;
    }
    #days {
        padding-right: 28px;
    }
    #goal {
        margin-top: 2rem;
        margin-right: 7rem;
        transform: none;
    }
}

